--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>midterm</title>
+   
+    <link rel="stylesheet" href="main.css">
+</head>
+<body>
+   
+<div>
+</div>
+    <div>
+MOHAMMAD ALJANOBI   
+ </div>
+ 
+  <a>
+         <div class="ridha">
+                <a href="..">
+                        HOME
+                    </a>
+                     <a href="PORTOLIO">
+                         PORTOLIO
+                    </a>
+                    <a href="contact">
+                        CONTACT
+                    </a>
+
+         </div>
+         <h2>
+         <a href="https://www.instagram.com/aljanobi3/">
+            instagram 
+          </a>
+         </h2>
+     </a>
+</body>
+</html>
