--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ MOHAMMAD ALJANOBI
                 <a href="..">
                         HOME
                     </a>
-                     <a href="PORTOLIO">
+                     <a href="portolio">
                          PORTOLIO
                     </a>
                     <a href="contact">
