--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ MOHAMMAD ALJANOBI
  
   <a>
          <div class="ridha">
-                <a href="..mid1">
+                <a href="mid1">
                         HOME
                     </a>
                      <a href="portolio">
